--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -30,7 +30,15 @@ The following rules are implemented at this time:
    * Properties
    * Delegates
    * Events
-
+ * SA1300 - Namespace, Class, Structure, Enum, Delegate, Event, Method and Property names must begin with an uppercase character.
+ * SA1302 - Interface names must begin with I
+ * SA1304 - NonPrivate Readonly fields must begin with an uppercase character
+ * SA1305 - Field names must not use Hungarian Notation.
+ * SA1306 - Internal Field names must begin with a lowercase character
+ * SA1307 - External Field names must begin with an uppercase character
+ * SA1308 - Variable names must not be prefixed {{{s_}}} or {{{m_}}}
+ * SA1309 - Field names should not begin with {{{_}}}
+ * SA1310 - Field names should not contain {{{_}}}
 
 = Credits =
 Rory Becker
