--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -41,7 +41,7 @@ The following rules are implemented at this time:
  * SA1310 - Field names should not contain {{{_}}}
 
 = History = 
-
+ * Build 914 - Fixed SA1307 - Previously required an initial lowercase char rather than uppercase.
  * Build 909 - Added SA1300 series of rules 
    * SA1301 is missing because it is unused at this time. 
    * SA1303 is missing because it was unclear how it should work.
