--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -41,6 +41,9 @@ The following rules are implemented at this time:
  * SA1310 - Field names should not contain {{{_}}}
 
 = History = 
+ * Build 928 - 
+   * Major Refactoring - Check everything :)
+   * Previously Supported rules now have fixes as well.
  * Build 914 - Fixed SA1307 - Previously required an initial lowercase char rather than uppercase.
  * Build 909 - Added SA1300 series of rules 
    * SA1301 is missing because it is unused at this time. 
