--- a/wiki/DX_DirectOptions.wiki
+++ b/wiki/DX_DirectOptions.wiki
@@ -1,4 +1,4 @@
-#summary Provides additional methods of accessing some of the !CodeRush options pages.
+#summary Provides additional methods of accessing some of the CodeRush options pages.
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_DirectOptions http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
