--- a/wiki/DX_DirectOptions.wiki
+++ b/wiki/DX_DirectOptions.wiki
@@ -17,3 +17,9 @@ The plugin provides 2 new actions "*!ShowTemplateOptions*" and "*!ShowShortcutOp
 Additionally these commands are made available from the !DevExpress menu as "*Template Options*" and "*Shortcut Options*" respectively.
 
 NOTE: The "!ShowTemplateOptions" and "Template Options" are only available if you have the full !CodeRush installed or are currently running a trial of same.
+
+= History = 
+ * Build 945 
+   * Altered menu items to include '...' rather than 'options'
+   * Added accelerator keys (S and T respectively) to menu items
+ * Build 930 - Initial Build
