Edited wiki page through web user interface.

--- a/wiki/CR_CreateDelegate.wiki
+++ b/wiki/CR_CreateDelegate.wiki
@@ -1,4 +1,5 @@
-#summary Creates a delegate froma method signature.
+#summary Creates a delegate from a method signature.
+[http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_CreateDelegate/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
 === Introduction ===
 
@@ -9,10 +10,6 @@ http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_CreateDelegate/Screens
 ...into these...
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_CreateDelegate/Screenshots/After.png
-
-=== Installation ===
-
-Installation instructions can be found on the InstallInstructions page.
 
 === Download === 
 Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_CreateDelegate/
@@ -28,4 +25,4 @@ This item will be in blue as it is implemented as a CodeProvider.
 
 === Credits ===
 
-Rory Becker [contact me on twitter(@rorybecker) or via email (Rorybecker@gmail.com)]
+RoryBecker 
