--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -1,4 +1,4 @@
-Allows for use of XPO Simplied Criteria Syntax (creates/updates the PersistentBase.FieldsClass of your object, for easy field reference)
+Allows for use of XPO Simplied Criteria Syntax (creates/updates the !PersistentBase.!FieldsClass of your object, for easy field reference)
 
 = Introduction =
 
@@ -6,13 +6,13 @@ XPO Simplified Criteria Syntax allows you to obtain your persistent objects prop
 
 Instead of:
 
-Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New BinaryOperator("CompanyTradingName", "B%", Like)) 
+Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New !BinaryOperator("CompanyTradingName", "B%", Like)) 
 
 After running XPOFieldsClassHelper you can now do:
 
-Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New BinaryOperator(Customer.Fields.CompanyTradingName, "B%", Like))
+Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New !BinaryOperator(Customer.Fields.CompanyTradingName, "B%", Like))
 
-This not only reads better but is Strongly Typed, meaning if you wanted to Refactor your object and change the CompanyTradingName property to say !TradingName, you will end up with Compile Errors highlighting where you have used that field, unlike the string representation which is perfectly valid code until it executes at Runtime and collapes in a heap ;)
+This not only reads better but is Strongly Typed, meaning if you wanted to Refactor your object and change the !CompanyTradingName property to say !TradingName, you will end up with Compile Errors highlighting where you have used that field, unlike the string representation which is perfectly valid code until it executes at Runtime and collapes in a heap ;)
 
 
 = Details =
