--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -8,11 +8,11 @@ Instead of:
 
 Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New !BinaryOperator("!CompanyTradingName", "B%", Like)) 
 
-After running XPOFieldsClassHelper you can now do:
+After running XPO_EasyFields you can now do:
 
 Dim MyCustomersStartingWithB as XPCollection(Of Customer)(New !BinaryOperator(Customer.Fields.CompanyTradingName, "B%", Like))
 
-This not only reads better but is Strongly Typed, meaning if you wanted to Refactor your object and change the !CompanyTradingName property to say !TradingName, you will end up with Compile Errors highlighting where you have used that field, unlike the string representation which is perfectly valid code until it executes at Runtime and collapes in a heap ;)
+This not only easier to identify fields and relations via Intellisense, but is Strongly Typed, meaning if you wanted to Refactor your object and change the !CompanyTradingName property to say !TradingName, you will end up with Compile Errors highlighting where you have used that field, unlike the string representation which is perfectly valid code until it executes at Runtime and collapes in a heap ;)
 
 
 = Details =
