Edited wiki page through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -38,6 +38,8 @@
     * [UnitTestErrorVisualizer]
   * Developer Plugins
     * [DX_ContextLab]
+  * XPO Plugins
+    * [XPO_EasyFields]
   * Misc Plugins
     * [CR_SmartQuotes]
     * [CR_SmartGenerics]
