--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -25,6 +25,7 @@ Place the caret on the Class name of your persistent object, bring up the Refact
 
 = History =
 
+Build 997 - Corrected some minor typos
 Build 991 - Initial Release
 
 = Future Plans =
