--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -25,8 +25,13 @@ Place the caret on the Class name of your persistent object, bring up the Refact
 
 = History =
 
-  * Build 997 Corrected some minor typos
-  * Build 991 Initial Release
+  * Build 1007
+    * Ability to perform the update anywhere within the class
+    * Shortcut included, you can now assign a shortcut to XPO Update FieldsClass
+  * Build 997
+    * Corrected some minor typos
+  * Build 991
+    * Initial Release
 
 = Future Plans =
 
