Edited wiki page through web user interface.

--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -19,7 +19,7 @@ This not only easier to identify fields and relations via Intellisense, but is S
 
 There are some differences between XPO_EasyFields and XPOFieldSync
 
-  * XPOFieldSync would create a region with a static name and replace this region everytime. This was an issue if you would “organise” your class to have your nested classes at different positions to your variable and property declarations, XPOFieldSync would see that there wasn’t a region create a new one and duplicate the class. XPO_!EasyFields replaces the 3 sections (FieldsClass, Fields Property, _Fields Variable) all in place so it doesn’t matter if you have organised your code, it will update anyways ;)
+  * XPOFieldSync would create a region with a static name and replace this region everytime. This was an issue if you would “organise” your class to have your nested classes at different positions to your variable and property declarations, XPOFieldSync would see that there wasn’t a region create a new one and duplicate the class. XPO_!EasyFields replaces the 3 sections (!FieldsClass, Fields Property, _Fields Variable) all in place so it doesn’t matter if you have organised your code, it will update anyways ;)
   * XPOFieldSync offered an automatic way to update the class, basically each time you changed a property XPOFieldSync would update the definition, XPO_!EasyFields doesn’t include this functionality as I found the automatic syncing slowed down the IDE too much for me with constant text being replaced.
   * XPOFieldSync still has an issue (as of March 2010) with XPCollections (that was introduced by a new version of DXCore in 2009) whereby it will skip them when generating the shadowed FieldsClass. XPO_!EasyFields seems to capture all fields within your class and being in the Open Source community should mean any issues identified can be fixed by any number of people.
 
