--- a/wiki/XPO_EasyFields.wiki
+++ b/wiki/XPO_EasyFields.wiki
@@ -37,7 +37,7 @@ Place the caret on the Class name of your persistent object, bring up the Refact
 
   * Build 1007
     * Ability to perform the update anywhere within the class
-    * Shortcut included, you can now assign a shortcut to XPO Update FieldsClass
+    * Shortcut included, you can now assign a shortcut to XPO Update !FieldsClass
   * Build 997
     * Corrected some minor typos
   * Build 991
