--- a/wiki/DX_CollapseFromEnd.wiki
+++ b/wiki/DX_CollapseFromEnd.wiki
@@ -19,4 +19,4 @@ Note: The glyph appears to the bottom left of the node, because studio appears t
 
 === Credits ===
 
-Rory Becker [contact me on twitter(@rorybecker) or via email (Rorybecker@gmail.com)]
+RoryBecker
