Edited wiki page through web user interface.

--- a/wiki/Refactor_FormatAssignments.wiki
+++ b/wiki/Refactor_FormatAssignments.wiki
@@ -16,5 +16,4 @@ Installation instructions can be found on the InstallInstructions page.
  - Choose "Format assignments" from the Refactor menu.
 
 = Credits =
-
-Author: Rory Becker
+RoryBecker
