--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -3,24 +3,21 @@
 == Who am I == 
 My name is Rory Becker. I am the original founder of this site and I am responsible, for better or worse, for several (but most definitely *not* all) of the plugins on this site. 
 
-== Contact me ==
-Feel free to contact me about these plugins 
- * Twitter: http://twitter.com/RoryBecker
- * Email: !RoryBecker@gmail.com
- * Blog: http://rorybecker.blogspot.com
 
 == Plugins ==
 Here are some links to some of the plugins I have written:
-
+<table border="0">
+<tr>
+<td valign="Top">
  * [CR_StyleNinja] 
  * [DX_DirectOptions]
  * [CR_QuickAddReference]
  * [DX_MoveCode]
- * [CR_LinkBar]
- * [CR_RemoveRegions]
-
- * [CR_ReSharperCompatibility] 
  * [CR_MetricShader]
+ * [CR_RemoveRegions]
+ * [CR_LinkBar]
+</td><td>
+ * [CR_ReSharperCompatibility] 
  * [DX_CollapseFromEnd]
  * [Refactor_FormatAssignments]
  * [CR_ImplementBaseConstructors]
@@ -28,5 +25,13 @@ Here are some links to some of the plugins I have written:
  * [CR_MsdnBclHelp]
  * [DX_PickFromListStringProvider]
  * [CR_Execute]
+</td></tr>
+</table>
 
 This is probably not a comprehensive list.
+
+== Contact me ==
+Feel free to contact me about these plugins 
+ * Twitter: http://twitter.com/RoryBecker
+ * Email: !RoryBecker@gmail.com
+ * Blog: http://rorybecker.blogspot.com
