--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -18,29 +18,38 @@ Here are some links to some of the plugins I have written:
  * [CR_CreateDelegate]
  * [CR_ClearAllMarkers]
  * [CR_LinkBar]
+
+ * [CR_GenerateTest]
+ * [CR_JumpToImplementation]
+
 </td><td>
  * [CR_ReSharperCompatibility] 
  * [DX_CollapseFromEnd]
+ * [DX_CustomCollapse]
  * [Refactor_FormatAssignments]
- * [CR_ImplementBaseConstructors]
  * [CR_MsdnBclHelp]
- * [DX_PickFromListStringProvider]
- * [CR_GenerateTest]
  * [CR_ImplementBaseConstructors]
- * [CR_JumpToImplementation]
  * [CR_MethodPreview]
- * [CR_MultiFileTemplates]
- * [CR_Paste]
  * [CR_SettingsMonitor]
  * [DX_GuidGen]
- * [DX_CustomCollapse]
  * [DX_BackupSettings]
-
  * [HighlightCurrentLineInEditor]
  * [CR_Execute]
 
 </td></tr>
 </table>
+
+These plugins are more experimental that the others.
+<table border="0">
+<tr>
+<td valign="Top">
+ * [CR_Paste]
+ * [DX_PickFromListStringProvider]
+ * [CR_MultiFileTemplates]
+</td>
+</tr>
+</table>
+
 
 This is probably not a comprehensive list.
 
