--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -20,7 +20,7 @@
     * [CR_QuickAddReference]
   * Organizational Plugins
     * [DX_CollapseFromEnd]
-    * DX_CustomCollapse
+    * [DX_CustomCollapse]
   * Navigation Plugins
     * [DX_MoveCode]
     * [CR_JumpToImplementation]
@@ -44,7 +44,7 @@
   * XPO Plugins
     * [XPO_EasyFields]
   * Misc Plugins
-    * DX_GuidGen
+    * [DX_GuidGen]
     * [CR_SmartQuotes]
     * [CR_SmartGenerics]
     * [CollapseXMLComment]
@@ -53,11 +53,11 @@
     * [CR_Initials]
     * [CR_MsdnBclHelp]
     * [DX_DirectOptions]
-    * CR_Paste
+    * [CR_Paste]
     * CR_SettingsMonitor
     * DX_BackupSettings 
   * Specialist Plugins
-    * CR_MultiFileTemplates
+    * [CR_MultiFileTemplates]
     * [DX_PickFromListStringProvider]
   * Obsolete Plugins
     * [CR_Execute]
